# durable-log

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  deny.toml
.github/workflows/: ci.yml
crates/durable-log/: Cargo.toml  README.md
crates/durable-log/src/: error.rs  lib.rs  log.rs  log_dir.rs  record.rs  segment.rs
crates/logctl/: Cargo.toml
crates/logctl/src/: main.rs
docs/: file-format.md
